# Tasks

./: .gitignore  Day2.md  Day3.md  README.md
AI Voice Based Doctor Appointment System/: .gitignore  DAILY_SUMMARY_2026-06-18.txt
ex1/: README.md  index.html  script.js  styles.css
ex10/: .gitignore  README.md
ex11/: README.md
ex11(With additional chunking methods)/: .gitignore
ex16/species-pipeline/: .env.example  .gitignore  API_SOURCES.md  ARCHITECTURE.md  DIRECTORY_STRUCTURE.md  Dockerfile  LLM_POLICY.md  MERGING_RULES.md  PROMPTS.md  README.md  alembic.ini  check_apis.py  clean_db.py  docker-compose.yml  local_species_final.db  pyproject.toml  species.csv  test_llm.py
ex16/species-pipeline/app/adapters/: gbif.py  inaturalist.py  iucn.py  wikidata.py  wikipedia.py
ex16/species-pipeline/app/caching/: cache.py
ex16/species-pipeline/app/cli/: main.py
ex16/species-pipeline/app/gap_detector/: detector.py
ex16/species-pipeline/app/interfaces/: adapter.py
ex16/species-pipeline/app/llm/: client.py
ex16/species-pipeline/app/logging/: logger.py
ex16/species-pipeline/app/merger/: merger.py
ex16/species-pipeline/app/models/: db.py  domain.py
ex16/species-pipeline/app/orchestrator/: pipeline.py
ex16/species-pipeline/app/reporter/: __init__.py  builders.py
ex16/species-pipeline/app/resolver/: resolver.py
ex16/species-pipeline/app/storage/: database.py  upsert.py
ex16/species-pipeline/app/validator/: validators.py
ex16/species-pipeline/migrations/: env.py
ex16/species-pipeline/migrations/versions/: 215ba7420c86_initial_schema.py
ex7/: cli.py  (+5 more)
(+331 files in other folders)
