[tool.poetry]
name = "species-pipeline"
version = "0.1.0"
description = "Species Data Aggregation Pipeline"
package-mode = false
authors = ["Rudra Bhavsar <rbhavsar1061974@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.26.7"
httpx = "^0.27.0"
pydantic = "^2.6.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
diskcache = "^5.6.3"
structlog = "^24.1.0"
python-dotenv = "^1.0.1"
asyncpg = "^0.31.0"
openai = "^2.41.1"
aiosqlite = "^0.22.1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
ruff = "^0.2.1"
isort = "^5.13.2"
mypy = "^1.8.0"
